trying to fix scrolling on mobile

--- a/src/App-mobile.css
+++ b/src/App-mobile.css
@@ -14,6 +14,7 @@ a{
   margin-left: 1%;
   margin-right: 1%;
   height: auto;
+  overflow-y: scroll;
 }
 .menu-item {
   height: 50px;
